fix(page): word break if texts are too long

--- a/src/pages/user/index.scss
+++ b/src/pages/user/index.scss
@@ -96,6 +96,8 @@
       margin-bottom: 1px;
 
       overflow-wrap: break-word;
+      word-wrap: break-word;
+      word-break: break-all;
       font-size: 13px;
 
       * + * {
